// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippet > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_oneLine__7w1x86d styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap; --_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_false__7w1x867"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__7w1x86h styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_4_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_9_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_command__7w1x869"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_n_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly in multiline with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868 styles_lines__7w1x86a"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_g_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copiedText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_oneLine__7w1x86d styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap; --_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_false__7w1x867"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__7w1x86h styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_1d_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with copyText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_oneLine__7w1x86d styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap; --_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_false__7w1x867"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__7w1x86h styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_18_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with custom number of rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--_7w1x860: 12;"
          >
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            />
          </pre>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_2e_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with helper  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          aria-describedby="_r_36_"
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_3a_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
        id="_r_36_"
        role="status"
      >
        helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with hideText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_1i_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with initiallyExpanded 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_20_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__7w1x86j"
          >
            <button
              aria-expanded="true"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Hide 
                <svg
                  aria-hidden="true"
                  class="styles_true__7w1x86n uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with label  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <label
        class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
      >
        label
      </label>
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_2q_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_default__l58dz70 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        >
          label
        </label>
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0M6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_33_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Show 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with noExpandable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_true__7w1x863 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            >
              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
            </span>
            <span
              class="styles__7w1x866 styles_multiline_true__7w1x868"
            />
          </pre>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_2j_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with showText 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="false"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_1p_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_false__7w1x86i"
          >
            <button
              aria-expanded="false"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Test 
                <svg
                  aria-hidden="true"
                  class="styles_false__7w1x86m uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix command 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_oneLine__7w1x86d styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap; --_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_false__7w1x867 styles_command__7w1x869"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__7w1x86h styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_u_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > renders correctly with single line with prefix lines number 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_oneLine__7w1x86d styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <pre
            class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap; --_7w1x860: 4;"
          >
            <span
              class="styles__7w1x866 styles_multiline_false__7w1x867 styles_lines__7w1x86a"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </span>
          </pre>
          <div
            class="styles_oneLine__7w1x86h styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_13_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snippet > should click on extend button to display full content on  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      style="--_1d8tbmb0: 100%;"
    >
      <div
        class="styles_multiline__7w1x86c styles__7w1x86b"
      >
        <div
          class="styles__7w1x86e styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
        >
          <div
            class="styles__j4ik6d1"
            data-is-animated="true"
            style="--j4ik6d0: 300ms; max-height: 112px; overflow: hidden;"
          >
            <pre
              class="styles__7w1x861 styles_noExpandable_false__7w1x862 styles_showMore_false__7w1x864 style__1do42ls0 style_prominence_default__1do42ls4 style_variant_code__1do42lsv style_undefined_compound_0__1do42ls1a"
              style="--_7w1x860: 4;"
            >
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              >
                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
              </span>
              <span
                class="styles__7w1x866 styles_multiline_true__7w1x868"
              />
            </pre>
          </div>
          <div
            class="styles_multiline__7w1x86g styles__7w1x86f"
          >
            <div
              class="styles__18qbklt5"
            >
              <button
                aria-labelledby="_r_27_"
                class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            class="styles_true__7w1x86j"
          >
            <button
              aria-expanded="true"
              class="styles__7w1x86k"
              type="button"
            >
              <span
                class="styles__7w1x86l style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              >
                Hide 
                <svg
                  aria-hidden="true"
                  class="styles_true__7w1x86n uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
